@@ -51,7 +51,6 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -348,7 +347,7 @@ public class JmsConnectorsTest {
                               .withHeader(JmsTimeToLive.create(999, TimeUnit.SECONDS))
                               .withHeader(JmsPriority.create(2))
                               .withHeader(JmsDeliveryMode.create(DeliveryMode.NON_PERSISTENT)))
-                  .collect(Collectors.toList());
+                  .toList();
           // #create-messages-with-headers
 
           Source.from(msgsIn).runWith(jmsSink, system);
@@ -446,9 +445,7 @@ public class JmsConnectorsTest {
           // #source-with-selector
 
           List<JmsTextMessage> oddMsgsIn =
-              msgsIn.stream()
-                  .filter(msg -> Integer.valueOf(msg.body()) % 2 == 1)
-                  .collect(Collectors.toList());
+              msgsIn.stream().filter(msg -> Integer.valueOf(msg.body()) % 2 == 1).toList();
           assertEquals(5, oddMsgsIn.size());
 
           CompletionStage<List<Message>> result =
@@ -477,8 +474,7 @@ public class JmsConnectorsTest {
     withConnectionFactory(
         connectionFactory -> {
           List<String> in = List.of("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k");
-          List<String> inNumbers =
-              IntStream.range(0, 10).boxed().map(String::valueOf).collect(Collectors.toList());
+          List<String> inNumbers = IntStream.range(0, 10).boxed().map(String::valueOf).toList();
 
           Sink<String, CompletionStage<Done>> jmsTopicSink =
               JmsProducer.textSink(
@@ -500,13 +496,13 @@ public class JmsConnectorsTest {
               jmsTopicSource
                   .take(in.size() + inNumbers.size())
                   .runWith(Sink.seq(), system)
-                  .thenApply(l -> l.stream().sorted().collect(Collectors.toList()));
+                  .thenApply(l -> l.stream().sorted().toList());
 
           CompletionStage<List<String>> result2 =
               jmsTopicSource2
                   .take(in.size() + inNumbers.size())
                   .runWith(Sink.seq(), system)
-                  .thenApply(l -> l.stream().sorted().collect(Collectors.toList()));
+                  .thenApply(l -> l.stream().sorted().toList());
 
           Thread.sleep(500);
 
@@ -514,10 +510,10 @@ public class JmsConnectorsTest {
           Source.from(inNumbers).runWith(jmsTopicSink2, system);
 
           assertEquals(
-              Stream.concat(in.stream(), inNumbers.stream()).sorted().collect(Collectors.toList()),
+              Stream.concat(in.stream(), inNumbers.stream()).sorted().toList(),
               result.toCompletableFuture().get(5, TimeUnit.SECONDS));
           assertEquals(
-              Stream.concat(in.stream(), inNumbers.stream()).sorted().collect(Collectors.toList()),
+              Stream.concat(in.stream(), inNumbers.stream()).sorted().toList(),
               result2.toCompletableFuture().get(5, TimeUnit.SECONDS));
         });
   }
@@ -636,7 +632,7 @@ public class JmsConnectorsTest {
           List<String> resultText =
               result.toCompletableFuture().get().stream()
                   .map(message -> ((ActiveMQTextMessage) message).getText())
-                  .collect(Collectors.toList());
+                  .toList();
 
           assertEquals(in, resultText);
         });
