@@ -45,7 +45,6 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.IntStream;
 
-import static java.util.stream.Collectors.toList;
 import static org.bson.codecs.configuration.CodecRegistries.fromProviders;
 import static org.bson.codecs.configuration.CodecRegistries.fromRegistries;
 import static org.junit.Assert.assertEquals;
@@ -63,7 +62,7 @@ public class MongoSinkTest {
   private final MongoCollection<Document> domainObjectsDocumentColl;
   private final MongoCollection<DomainObject> domainObjectsColl;
 
-  private final List<Integer> testRange = IntStream.range(1, 10).boxed().collect(toList());
+  private final List<Integer> testRange = IntStream.range(1, 10).boxed().toList();
 
   public MongoSinkTest() {
     system = ActorSystem.create();
@@ -154,13 +153,13 @@ public class MongoSinkTest {
         testRange,
         found.toCompletableFuture().get(5, TimeUnit.SECONDS).stream()
             .map(n -> n.getInteger("value"))
-            .collect(toList()));
+            .toList());
   }
 
   @Test
   public void saveWithInsertOneAndCodecSupport() throws Exception {
     // #insert-one
-    List<Number> testRangeObjects = testRange.stream().map(Number::new).collect(toList());
+    List<Number> testRangeObjects = testRange.stream().map(Number::new).toList();
     final CompletionStage<Done> completion =
         Source.from(testRangeObjects).runWith(MongoSink.insertOne(numbersColl), system);
     // #insert-one
@@ -187,13 +186,13 @@ public class MongoSinkTest {
         testRange,
         found.toCompletableFuture().get(5, TimeUnit.SECONDS).stream()
             .map(n -> n.getInteger("value"))
-            .collect(toList()));
+            .toList());
   }
 
   @Test
   public void saveWithInsertManyAndCodecSupport() throws Exception {
     // #insert-many
-    final List<Number> testRangeObjects = testRange.stream().map(Number::new).collect(toList());
+    final List<Number> testRangeObjects = testRange.stream().map(Number::new).toList();
     final CompletionStage<Done> completion =
         Source.from(testRangeObjects).grouped(2).runWith(MongoSink.insertMany(numbersColl), system);
     // #insert-many
@@ -224,12 +223,12 @@ public class MongoSinkTest {
         testRange,
         found.toCompletableFuture().get(5, TimeUnit.SECONDS).stream()
             .map(n -> n.getInteger("value"))
-            .collect(toList()));
+            .toList());
   }
 
   @Test
   public void saveWithInsertManyWithOptionsAndCodecSupport() throws Exception {
-    List<Number> testRangeObjects = testRange.stream().map(Number::new).collect(toList());
+    List<Number> testRangeObjects = testRange.stream().map(Number::new).toList();
     final CompletionStage<Done> completion =
         Source.from(testRangeObjects)
             .grouped(2)
@@ -264,10 +263,10 @@ public class MongoSinkTest {
         Source.fromPublisher(numbersDocumentColl.find()).runWith(Sink.seq(), system);
 
     assertEquals(
-        testRange.stream().map(i -> Pair.create(i, i * -1)).collect(toList()),
+        testRange.stream().map(i -> Pair.create(i, i * -1)).toList(),
         found.toCompletableFuture().get(5, TimeUnit.SECONDS).stream()
             .map(d -> Pair.create(d.getInteger("value"), d.getInteger("updateValue")))
-            .collect(toList()));
+            .toList());
   }
 
   @Test
@@ -287,10 +286,10 @@ public class MongoSinkTest {
         Source.fromPublisher(numbersDocumentColl.find()).runWith(Sink.seq(), system);
 
     assertEquals(
-        testRange.stream().map(i -> Pair.create(i, 0)).collect(toList()),
+        testRange.stream().map(i -> Pair.create(i, 0)).toList(),
         found.toCompletableFuture().get(5, TimeUnit.SECONDS).stream()
             .map(d -> Pair.create(d.getInteger("value"), d.getInteger("updateValue")))
-            .collect(toList()));
+            .toList());
   }
 
   @Test
@@ -363,7 +362,7 @@ public class MongoSinkTest {
                         i,
                         String.format("updated-first-property-%s", i),
                         String.format("updated-second-property-%s", i)))
-            .collect(toList());
+            .toList();
 
     assertEquals(expected, found);
   }
